docker-composeファイル追加

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,64 @@
+version: "3.9"
 
+services:
+  app:
+    container_name: app
+    build:
+      context: .
+      dockerfile: containers/go/Dockerfile
+    command: sh -c "/usr/local/bin/entrypoint.sh"
+    env_file:
+      - .env
+    volumes:
+      - ./application:/code/
+      - ./static:/static
+    ports:
+      - "8000:8000"
+      - "8080:8080"
+    depends_on:
+      db:
+        condition: service_healthy
+    networks:
+      - app_web
+      - app_db
+  db:
+    container_name: db
+    build:
+      context: .
+      dockerfile: containers/postgres/Dockerfile
+    volumes:
+      - db_data:/var/lib/postgresql/data
+    healthcheck:
+      test: pg_isready -U "${POSTGRES_USER:-postgres}" || exit 1
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    env_file:
+      - .env
+    ports:
+      - "5432:5432"
+    networks:
+      - app_db
+
+  nginx:
+    container_name: web
+    build:
+      context: .
+      dockerfile: containers/nginx/Dockerfile
+    volumes:
+      - ./static:/static
+    ports:
+      - 80:80
+    depends_on:
+      - app
+    networks:
+      - app_web
+
+volumes:
+  db_data:
+  static:
+
+
+networks:
+  app_web:
+  app_db:
