--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - .env
     platform: linux/amd64
     volumes:
-      - ./application:/code/
+      - ./cmd:/code/
       - ./static:/static
     ports:
       - "8000:8000"
