--- a/containers/nginx/nginx.conf
+++ b/containers/nginx/nginx.conf
@@ -1,31 +1,38 @@
-upstream gunicorn {
-    server app:8000;
+upstream front {
+    server host.docker.internal:3000;
+}
+
+upstream back {
+    server host.docker.internal:8000;
 }
 
 server {
-    listen 80;
-    server_name localhost;
-    server_tokens off;
+    listen       80;
+    server_name  localhost;
 
     client_max_body_size 5M;
 
-    charset utf-8;
+    location / {
+        proxy_pass http://front/;
+    }
 
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
-
-    location /api {
-        proxy_set_header X-Real-IP $remote_addr;
+    location /back/ {
+        proxy_set_header X-Forwarded-Host $host:$server_port;
+        proxy_set_header X-Forwarded-Server $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $http_host;
-        proxy_read_timeout 3600;
+
+        proxy_pass http://back/;
     }
 
-    location /health {
-        empty_gif;
-        access_log off;
-        break;
+    location /upload/ {
+        proxy_pass http://back/upload/;
     }
 
-    keepalive_timeout 60;
+    location /_next/webpack-hmr {
+        proxy_pass http://front/_next/webpack-hmr;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
+
 }
