🐰 hello go world

--- a/containers/go/Dockerfile
+++ b/containers/go/Dockerfile
@@ -1,10 +1,20 @@
-FROM --platform=linux/x86_64 golang:1.20
+FROM golang:1.21
 
+# 作業ディレクトリを設定
 WORKDIR /usr/local/go/src/go-party-box/
 
-RUN go install github.com/go-delve/delve/cmd/dlv@latest && \
-  go install github.com/cosmtrek/air@v1.42.0
+# Airツールをインストール
+RUN go install github.com/cosmtrek/air@v1.42.0
 
+# go.mod と go.sum をコピーして依存関係をダウンロード
+COPY application/go.mod application/go.sum ./
+RUN go mod download
+
+# Prisma Clientを事前にキャッシュするために prefetch を実行
+RUN go run github.com/steebchen/prisma-client-go prefetch
+
+# アプリケーションのソースコードをコピーしてビルド
 COPY application/. /usr/local/go/src/go-party-box/
 
-RUN go mod download
+# Prisma Clientを生成
+RUN go run github.com/steebchen/prisma-client-go generate
